Refactor NGINX configuration and environment files for multi-strategy FreqTrade setup

--- a/env-files/adaptiverenkostrategy.env
+++ b/env-files/adaptiverenkostrategy.env
@@ -22,6 +22,10 @@ FREQTRADE__API_SERVER__USERNAME=adaptiverenkostrategy_user
 FREQTRADE__API_SERVER__PASSWORD=adaptiverenko_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=AdaptiveRenkoStrategyJWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=AdaptiveRenkoStrategyWSToken2024
+FREQTRADE__API_SERVER__ROOT_PATH=/renko
+FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
+FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
+
 
 # Telegram Settings (Optional)
 FREQTRADE__TELEGRAM__ENABLED=false
