--- a/env-files/fastsupertrend.env
+++ b/env-files/fastsupertrend.env
@@ -22,6 +22,10 @@ FREQTRADE__API_SERVER__USERNAME=fastsupertrend_user
 FREQTRADE__API_SERVER__PASSWORD=fastsupertrend_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=FastSuperTrendJWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=FastSuperTrendWSToken2024
+FREQTRADE__API_SERVER__ROOT_PATH=/fastsupertrend
+FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
+FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
+
 
 # Telegram Settings (Optional)
 FREQTRADE__TELEGRAM__ENABLED=false
