--- a/env-files/fvgadvanced.env
+++ b/env-files/fvgadvanced.env
@@ -22,6 +22,10 @@ FREQTRADE__API_SERVER__USERNAME=fvgadvanced_user
 FREQTRADE__API_SERVER__PASSWORD=fvgadvanced_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=FVGAdvancedJWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=FVGAdvancedWSToken2024
+FREQTRADE__API_SERVER__ROOT_PATH=/fvg
+FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
+FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
+
 
 # Telegram Settings (Optional)
 FREQTRADE__TELEGRAM__ENABLED=false
