--- a/env-files/bandtastic-fiboHyper.env
+++ b/env-files/bandtastic-fiboHyper.env
@@ -22,6 +22,10 @@ FREQTRADE__API_SERVER__USERNAME=bandtastic_user
 FREQTRADE__API_SERVER__PASSWORD=bandtastic_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=BandtasticJWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=BandtasticWSToken2024
+FREQTRADE__API_SERVER__ROOT_PATH=/bandtastic
+FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
+FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
+
 
 # Telegram Settings (Optional)
 FREQTRADE__TELEGRAM__ENABLED=false
