--- a/env-files/nfi.env
+++ b/env-files/nfi.env
@@ -22,6 +22,10 @@ FREQTRADE__API_SERVER__USERNAME=nostalgiainfinityx6_user
 FREQTRADE__API_SERVER__PASSWORD=nostalgiainfinityx6_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=NostalgiaInfinityX6JWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=NostalgiaInfinityX6WSToken2024
+FREQTRADE__API_SERVER__ROOT_PATH=/nfi
+FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
+FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
+
 
 # Telegram Settings (Optional)
 FREQTRADE__TELEGRAM__ENABLED=false
