--- a/env-files/powertower.env
+++ b/env-files/powertower.env
@@ -22,6 +22,10 @@ FREQTRADE__API_SERVER__USERNAME=powertower_user
 FREQTRADE__API_SERVER__PASSWORD=powertower_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=PowerTowerJWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=PowerTowerWSToken2024
+FREQTRADE__API_SERVER__ROOT_PATH=/powertower
+FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
+FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
+
 
 # Telegram Settings (Optional)
 FREQTRADE__TELEGRAM__ENABLED=false
