--- a/env-files/quickadapter.env
+++ b/env-files/quickadapter.env
@@ -25,6 +25,10 @@ FREQTRADE__API_SERVER__USERNAME=QuickAdapter_user
 FREQTRADE__API_SERVER__PASSWORD=QuickAdapter_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=QuickAdapterJWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=QuickAdapterWSToken2024
+FREQTRADE__API_SERVER__ROOT_PATH=/quick
+FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
+FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
+
 
 # Telegram Settings (Optional)
 FREQTRADE__TELEGRAM__ENABLED=false
