--- a/env-files/trendfollowing.env
+++ b/env-files/trendfollowing.env
@@ -22,6 +22,10 @@ FREQTRADE__API_SERVER__USERNAME=trendfollowing_user
 FREQTRADE__API_SERVER__PASSWORD=trendfollowing_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=TrendFollowingJWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=TrendFollowingWSToken2024
+FREQTRADE__API_SERVER__ROOT_PATH=/trend
+FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
+FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
+
 
 # Telegram Settings (Optional)
 FREQTRADE__TELEGRAM__ENABLED=false
