--- a/nginx-freqtrade.conf
+++ b/nginx-freqtrade.conf
@@ -1,110 +1,103 @@
-# NGINX Configuration for Freqtrade Reverse Proxy
-# This configuration supports WebSockets required for FreqUI
+# Freqtrade multi-bot reverse proxy (path-based routing)
+#
+# Each bot advertises a unique ROOT_PATH configured via environment variables.
+# Requests arriving on freq.gaiaderma.com/<prefix>/ are forwarded to the matching
+# container port exposed on localhost by docker-compose.
 
-# WebSocket upgrade mapping (required for FreqUI)
 map $http_upgrade $connection_upgrade {
     default upgrade;
-    '' close;
+    ''      close;
 }
+
+limit_req_zone $binary_remote_addr zone=freqtrade_api:10m rate=10r/s;
 
 server {
     listen 80;
     listen [::]:80;
-    
-    # Replace with your EC2 public IP or domain name
-    server_name YOUR_EC2_PUBLIC_domain;
-    
-    # Security headers
+    server_name freq.gaiaderma.com;
+
     add_header X-Frame-Options DENY;
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
-    
-    # Rate limiting for API endpoints
-    limit_req zone=api burst=10 nodelay;
-    
-    # Main location block for Freqtrade API and UI
+
+    access_log /var/log/nginx/freqtrade_access.log;
+    error_log  /var/log/nginx/freqtrade_error.log;
+
+    # Optional: redirect bare root to the primary bot
+    location = / { return 302 /nfi/; }
+
+    # strategy prefixes ------------------------------------------------------
+    location = /nfi        { return 302 /nfi/; }
+    location /nfi/ {
+        limit_req zone=freqtrade_api burst=15 nodelay;
+        proxy_pass http://127.0.0.1:8080/;
+        include snippets/freqtrade_proxy_params.conf;
+        proxy_set_header X-Forwarded-Prefix /nfi;
+    }
+
+    location = /bandtastic        { return 302 /bandtastic/; }
+    location /bandtastic/ {
+        limit_req zone=freqtrade_api burst=15 nodelay;
+        proxy_pass http://127.0.0.1:8081/;
+        include snippets/freqtrade_proxy_params.conf;
+        proxy_set_header X-Forwarded-Prefix /bandtastic;
+    }
+
+    location = /fastsupertrend        { return 302 /fastsupertrend/; }
+    location /fastsupertrend/ {
+        limit_req zone=freqtrade_api burst=15 nodelay;
+        proxy_pass http://127.0.0.1:8082/;
+        include snippets/freqtrade_proxy_params.conf;
+        proxy_set_header X-Forwarded-Prefix /fastsupertrend;
+    }
+
+    location = /fvg        { return 302 /fvg/; }
+    location /fvg/ {
+        limit_req zone=freqtrade_api burst=15 nodelay;
+        proxy_pass http://127.0.0.1:8083/;
+        include snippets/freqtrade_proxy_params.conf;
+        proxy_set_header X-Forwarded-Prefix /fvg;
+    }
+
+    location = /powertower        { return 302 /powertower/; }
+    location /powertower/ {
+        limit_req zone=freqtrade_api burst=15 nodelay;
+        proxy_pass http://127.0.0.1:8084/;
+        include snippets/freqtrade_proxy_params.conf;
+        proxy_set_header X-Forwarded-Prefix /powertower;
+    }
+
+    location = /trend        { return 302 /trend/; }
+    location /trend/ {
+        limit_req zone=freqtrade_api burst=15 nodelay;
+        proxy_pass http://127.0.0.1:8085/;
+        include snippets/freqtrade_proxy_params.conf;
+        proxy_set_header X-Forwarded-Prefix /trend;
+    }
+
+    location = /renko        { return 302 /renko/; }
+    location /renko/ {
+        limit_req zone=freqtrade_api burst=15 nodelay;
+        proxy_pass http://127.0.0.1:8086/;
+        include snippets/freqtrade_proxy_params.conf;
+        proxy_set_header X-Forwarded-Prefix /renko;
+    }
+
+    location = /quick        { return 302 /quick/; }
+    location /quick/ {
+        limit_req zone=freqtrade_api burst=15 nodelay;
+        proxy_pass http://127.0.0.1:8087/;
+        include snippets/freqtrade_proxy_params.conf;
+        proxy_set_header X-Forwarded-Prefix /quick;
+    }
+
+    # fall-through
     location / {
-        # Proxy settings
-        proxy_pass http://127.0.0.1:8989;
-        proxy_http_version 1.1;
-        
-        # WebSocket support (essential for FreqUI)
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        
-        # Standard proxy headers
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $server_name;
-        
-        # Timeout settings (important for WebSockets)
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-        
-        # Disable proxy buffering for better real-time performance
-        proxy_buffering off;
-        proxy_cache_bypass $http_upgrade;
+        return 404;
     }
-    
-    # Health check endpoint (optional but useful)
-    location /health {
-        access_log off;
-        proxy_pass http://127.0.0.1:8989/api/v1/ping;
-        proxy_set_header Host $host;
-    }
-    
-    # Security: Block access to sensitive files
+
     location ~ /\.(ht|env|git) {
         deny all;
         return 404;
     }
-    
-    # Logging
-    access_log /var/log/nginx/freqtrade_access.log;
-    error_log /var/log/nginx/freqtrade_error.log;
 }
-
-# Optional: HTTPS configuration (recommended for production)
-# Uncomment and configure after setting up SSL certificates
-# server {
-#     listen 443 ssl http2;
-#     listen [::]:443 ssl http2;
-#     
-#     server_name YOUR_EC2_PUBLIC_domain;
-#     
-#     # SSL configuration (use certbot for Let's Encrypt certificates)
-#     ssl_certificate /path/to/your/certificate.crt;
-#     ssl_certificate_key /path/to/your/private.key;
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
-#     ssl_prefer_server_ciphers off;
-#     
-#     # Same location blocks as above
-#     location / {
-#         proxy_pass http://127.0.0.1:8989;
-#         proxy_http_version 1.1;
-#         proxy_set_header Upgrade $http_upgrade;
-#         proxy_set_header Connection $connection_upgrade;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         proxy_set_header X-Forwarded-Host $server_name;
-#         proxy_connect_timeout 60s;
-#         proxy_send_timeout 60s;
-#         proxy_read_timeout 60s;
-#         proxy_buffering off;
-#         proxy_cache_bypass $http_upgrade;
-#     }
-# }
-
-# HTTP to HTTPS redirect (uncomment when SSL is configured)
-# server {
-#     listen 80;
-#     listen [::]:80;
-#     server_name YOUR_EC2_PUBLIC_domain;
-#     return 301 https://$server_name$request_uri;
-# }
