Add multi-strategy deployment and configuration for FreqTrade
- Implemented a comprehensive deployment script (deploy-multi-strategies.sh) for managing multiple FreqTrade strategies.
- Created a Docker Compose configuration (docker-compose-multi-strategies.yml) to set up various FreqTrade containers.
- Added environment files for each strategy, including BandtasticFiboHyper, DTW, FVG, NostalgiaForInfinityX6, NoTankAI, Renko, and others, with necessary API and trading configurations.
- Configured NGINX for reverse proxying and WebSocket support, ensuring proper routing to each strategy's API.
- Developed an API credentials update script (update-api-credentials.sh) to facilitate easy updates of API keys and secrets across all environment files.
- Included proxy headers configuration for NGINX to maintain consistent headers across strategy endpoints.

--- a/env-files/quickadapter.env
+++ b/env-files/quickadapter.env
@@ -1,16 +1,13 @@
-# QuickAdapterV3 Strategy Environment
-# Multi-Strategy Freqtrade Setup - Strategy 5
+# QuickAdapter Strategy Environment
+# Multi-Strategy Freqtrade Setup - QuickAdapter
 
-FREQTRADE__BOT_NAME=Vasko_QuickAdapterV3
+FREQTRADE__BOT_NAME=Vasko_QuickAdapter
 FREQTRADE__STRATEGY=QuickAdapterV3
-
-# FreqAI Configuration Requirements
-FREQTRADE__FREQAI_ENABLED=true
 
 # Trading Configuration
 FREQTRADE__TRADING_MODE=futures
-FREQTRADE__MAX_OPEN_TRADES=6
-FREQTRADE__FUTURES_MAX_OPEN_TRADES_LONG=4
+FREQTRADE__MAX_OPEN_TRADES=5
+FREQTRADE__FUTURES_MAX_OPEN_TRADES_LONG=3
 FREQTRADE__FUTURES_MAX_OPEN_TRADES_SHORT=2
 
 # Exchange Settings (Bybit)
@@ -20,15 +17,14 @@ FREQTRADE__EXCHANGE__SECRET=Put_Your_Bybit_API_Secret_Here
 
 # API Server Configuration
 FREQTRADE__API_SERVER__ENABLED=true
-FREQTRADE__API_SERVER__LISTEN_PORT=8087
-FREQTRADE__API_SERVER__USERNAME=QuickAdapter_user
-FREQTRADE__API_SERVER__PASSWORD=QuickAdapter_secure_password
+FREQTRADE__API_SERVER__LISTEN_PORT=8080
+FREQTRADE__API_SERVER__USERNAME=quickadapter_user
+FREQTRADE__API_SERVER__PASSWORD=quickadapter_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=QuickAdapterJWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=QuickAdapterWSToken2024
-FREQTRADE__API_SERVER__ROOT_PATH=/quick
+FREQTRADE__API_SERVER__ROOT_PATH=/api/v1/quickadapter
 FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
 FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
-
 
 # Telegram Settings (Optional)
 FREQTRADE__TELEGRAM__ENABLED=false
@@ -38,6 +34,3 @@ FREQTRADE__TELEGRAM__CHAT_ID=123456789
 # Environment Settings
 TZ=Europe/Istanbul
 FREQTRADE__DRY_RUN=true
-
-# Strategy Path Configuration
-STRATEGY_PATH=user_data/strategies/quickadapter
