--- a/env-files/bandtastic.env
+++ b/env-files/bandtastic.env
@@ -1,14 +1,14 @@
-# NostalgiaForInfinityX6 Strategy Environment
-# Multi-Strategy Freqtrade Setup - Strategy 6
+# BandtasticFiboHyper Strategy Environment
+# Multi-Strategy Freqtrade Setup - BandtasticFiboHyper
 
-FREQTRADE__BOT_NAME=Vasko_NFI_X6
-FREQTRADE__STRATEGY=NostalgiaForInfinityX6
+FREQTRADE__BOT_NAME=Vasko_Bandtastic
+FREQTRADE__STRATEGY=BandtasticFiboHyper_opt314
 
 # Trading Configuration
 FREQTRADE__TRADING_MODE=futures
-FREQTRADE__MAX_OPEN_TRADES=7
+FREQTRADE__MAX_OPEN_TRADES=6
 FREQTRADE__FUTURES_MAX_OPEN_TRADES_LONG=4
-FREQTRADE__FUTURES_MAX_OPEN_TRADES_SHORT=3
+FREQTRADE__FUTURES_MAX_OPEN_TRADES_SHORT=2
 
 # Exchange Settings (Bybit)
 FREQTRADE__EXCHANGE__NAME=bybit
@@ -18,14 +18,13 @@ FREQTRADE__EXCHANGE__SECRET=Put_Your_Bybit_API_Secret_Here
 # API Server Configuration
 FREQTRADE__API_SERVER__ENABLED=true
 FREQTRADE__API_SERVER__LISTEN_PORT=8080
-FREQTRADE__API_SERVER__USERNAME=nostalgiainfinityx6_user
-FREQTRADE__API_SERVER__PASSWORD=nostalgiainfinityx6_secure_password
-FREQTRADE__API_SERVER__JWT_SECRET_KEY=NostalgiaInfinityX6JWTSecretKey2024
-FREQTRADE__API_SERVER__WS_TOKEN=NostalgiaInfinityX6WSToken2024
-FREQTRADE__API_SERVER__ROOT_PATH=/nfi
+FREQTRADE__API_SERVER__USERNAME=bandtastic_user
+FREQTRADE__API_SERVER__PASSWORD=bandtastic_secure_password
+FREQTRADE__API_SERVER__JWT_SECRET_KEY=BandtasticJWTSecretKey2024
+FREQTRADE__API_SERVER__WS_TOKEN=BandtasticWSToken2024
+FREQTRADE__API_SERVER__ROOT_PATH=/api/v1/bandtastic
 FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
 FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
-
 
 # Telegram Settings (Optional)
 FREQTRADE__TELEGRAM__ENABLED=false
@@ -35,6 +34,3 @@ FREQTRADE__TELEGRAM__CHAT_ID=123456789
 # Environment Settings
 TZ=Europe/Istanbul
 FREQTRADE__DRY_RUN=true
-
-# Strategy Path Configuration
-STRATEGY_PATH=user_data/strategies/NostalgiaForInfinityX6.py
