--- a/env-files/fastsupertrend.env
+++ b/env-files/fastsupertrend.env
@@ -1,7 +1,7 @@
-# FastSuperTrend Strategy Environment
-# Multi-Strategy Freqtrade Setup - Strategy 2
+# FastSupertrend Strategy Environment
+# Multi-Strategy Freqtrade Setup - FastSupertrend
 
-FREQTRADE__BOT_NAME=Vasko_FastSuperTrend
+FREQTRADE__BOT_NAME=Vasko_FastSupertrend
 FREQTRADE__STRATEGY=FastSupertrend_optim3_rsi_75lev
 
 # Trading Configuration
@@ -17,15 +17,14 @@ FREQTRADE__EXCHANGE__SECRET=Put_Your_Bybit_API_Secret_Here
 
 # API Server Configuration
 FREQTRADE__API_SERVER__ENABLED=true
-FREQTRADE__API_SERVER__LISTEN_PORT=8082
+FREQTRADE__API_SERVER__LISTEN_PORT=8080
 FREQTRADE__API_SERVER__USERNAME=fastsupertrend_user
 FREQTRADE__API_SERVER__PASSWORD=fastsupertrend_secure_password
-FREQTRADE__API_SERVER__JWT_SECRET_KEY=FastSuperTrendJWTSecretKey2024
-FREQTRADE__API_SERVER__WS_TOKEN=FastSuperTrendWSToken2024
-FREQTRADE__API_SERVER__ROOT_PATH=/fastsupertrend
+FREQTRADE__API_SERVER__JWT_SECRET_KEY=FastSupertrendJWTSecretKey2024
+FREQTRADE__API_SERVER__WS_TOKEN=FastSupertrendWSToken2024
+FREQTRADE__API_SERVER__ROOT_PATH=/api/v1/fastsupertrend
 FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
 FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
-
 
 # Telegram Settings (Optional)
 FREQTRADE__TELEGRAM__ENABLED=false
@@ -35,6 +34,3 @@ FREQTRADE__TELEGRAM__CHAT_ID=123456789
 # Environment Settings
 TZ=Europe/Istanbul
 FREQTRADE__DRY_RUN=true
-
-# Strategy Path Configuration
-STRATEGY_PATH=user_data/strategies/fastsupertrend
