--- a/env-files/fvg.env
+++ b/env-files/fvg.env
@@ -1,13 +1,13 @@
 # FVGAdvancedStrategy_V2 Environment
-# Multi-Strategy Freqtrade Setup - Strategy 3
+# Multi-Strategy Freqtrade Setup - FVG
 
-FREQTRADE__BOT_NAME=Vasko_FVGAdvanced
+FREQTRADE__BOT_NAME=Vasko_FVG
 FREQTRADE__STRATEGY=FVGAdvancedStrategy_V2
 
 # Trading Configuration
 FREQTRADE__TRADING_MODE=futures
-FREQTRADE__MAX_OPEN_TRADES=5
-FREQTRADE__FUTURES_MAX_OPEN_TRADES_LONG=3
+FREQTRADE__MAX_OPEN_TRADES=6
+FREQTRADE__FUTURES_MAX_OPEN_TRADES_LONG=4
 FREQTRADE__FUTURES_MAX_OPEN_TRADES_SHORT=2
 
 # Exchange Settings (Bybit)
@@ -17,15 +17,14 @@ FREQTRADE__EXCHANGE__SECRET=Put_Your_Bybit_API_Secret_Here
 
 # API Server Configuration
 FREQTRADE__API_SERVER__ENABLED=true
-FREQTRADE__API_SERVER__LISTEN_PORT=8083
-FREQTRADE__API_SERVER__USERNAME=fvgadvanced_user
-FREQTRADE__API_SERVER__PASSWORD=fvgadvanced_secure_password
-FREQTRADE__API_SERVER__JWT_SECRET_KEY=FVGAdvancedJWTSecretKey2024
-FREQTRADE__API_SERVER__WS_TOKEN=FVGAdvancedWSToken2024
-FREQTRADE__API_SERVER__ROOT_PATH=/fvg
+FREQTRADE__API_SERVER__LISTEN_PORT=8080
+FREQTRADE__API_SERVER__USERNAME=fvg_user
+FREQTRADE__API_SERVER__PASSWORD=fvg_secure_password
+FREQTRADE__API_SERVER__JWT_SECRET_KEY=FVGJWTSecretKey2024
+FREQTRADE__API_SERVER__WS_TOKEN=FVGWSToken2024
+FREQTRADE__API_SERVER__ROOT_PATH=/api/v1/fvg
 FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
 FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
-
 
 # Telegram Settings (Optional)
 FREQTRADE__TELEGRAM__ENABLED=false
@@ -35,6 +34,3 @@ FREQTRADE__TELEGRAM__CHAT_ID=123456789
 # Environment Settings
 TZ=Europe/Istanbul
 FREQTRADE__DRY_RUN=true
-
-# Strategy Path Configuration
-STRATEGY_PATH=user_data/strategies/FVGAdvancedStrategy_V2
