--- a/env-files/nfi-x6.env
+++ b/env-files/nfi-x6.env
@@ -1,8 +1,8 @@
-# AdaptiveRenkoStrategy Strategy Environment
-# Multi-Strategy Freqtrade Setup - Strategy 7
+# NostalgiaForInfinityX6 Strategy Environment
+# Multi-Strategy Freqtrade Setup - Strategy NFI-X6
 
-FREQTRADE__BOT_NAME=Vasko_AdaptiveRenkoStrategy
-FREQTRADE__STRATEGY=AdaptiveRenkoStrategy
+FREQTRADE__BOT_NAME=Vasko_NFI_X6
+FREQTRADE__STRATEGY=NostalgiaForInfinityX6
 
 # Trading Configuration
 FREQTRADE__TRADING_MODE=futures
@@ -17,15 +17,14 @@ FREQTRADE__EXCHANGE__SECRET=Put_Your_Bybit_API_Secret_Here
 
 # API Server Configuration
 FREQTRADE__API_SERVER__ENABLED=true
-FREQTRADE__API_SERVER__LISTEN_PORT=8086
-FREQTRADE__API_SERVER__USERNAME=adaptiverenkostrategy_user
-FREQTRADE__API_SERVER__PASSWORD=adaptiverenko_secure_password
-FREQTRADE__API_SERVER__JWT_SECRET_KEY=AdaptiveRenkoStrategyJWTSecretKey2024
-FREQTRADE__API_SERVER__WS_TOKEN=AdaptiveRenkoStrategyWSToken2024
-FREQTRADE__API_SERVER__ROOT_PATH=/renko
+FREQTRADE__API_SERVER__LISTEN_PORT=8080
+FREQTRADE__API_SERVER__USERNAME=nfi_x6_user
+FREQTRADE__API_SERVER__PASSWORD=nfi_x6_secure_password
+FREQTRADE__API_SERVER__JWT_SECRET_KEY=NostalgiaInfinityX6JWTSecretKey2024
+FREQTRADE__API_SERVER__WS_TOKEN=NostalgiaInfinityX6WSToken2024
+FREQTRADE__API_SERVER__ROOT_PATH=/api/v1/nfi-x6
 FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
 FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
-
 
 # Telegram Settings (Optional)
 FREQTRADE__TELEGRAM__ENABLED=false
@@ -35,6 +34,3 @@ FREQTRADE__TELEGRAM__CHAT_ID=123456789
 # Environment Settings
 TZ=Europe/Istanbul
 FREQTRADE__DRY_RUN=true
-
-# Strategy Path Configuration
-STRATEGY_PATH=user_data/strategies/renko
