--- a/env-files/notankai.env
+++ b/env-files/notankai.env
@@ -1,13 +1,13 @@
-# TrendFollowing Strategy Environment
-# Multi-Strategy Freqtrade Setup - TrendFollowing
+# NoTankAI Strategy Environment
+# Multi-Strategy Freqtrade Setup - NoTankAI
 
-FREQTRADE__BOT_NAME=Vasko_TrendFollowing
-FREQTRADE__STRATEGY=TrendFollowingStrategy
+FREQTRADE__BOT_NAME=Vasko_NoTankAI
+FREQTRADE__STRATEGY=NoTankAI_15
 
 # Trading Configuration
 FREQTRADE__TRADING_MODE=futures
-FREQTRADE__MAX_OPEN_TRADES=4
-FREQTRADE__FUTURES_MAX_OPEN_TRADES_LONG=2
+FREQTRADE__MAX_OPEN_TRADES=6
+FREQTRADE__FUTURES_MAX_OPEN_TRADES_LONG=4
 FREQTRADE__FUTURES_MAX_OPEN_TRADES_SHORT=2
 
 # Exchange Settings (Bybit)
@@ -18,11 +18,11 @@ FREQTRADE__EXCHANGE__SECRET=Put_Your_Bybit_API_Secret_Here
 # API Server Configuration
 FREQTRADE__API_SERVER__ENABLED=true
 FREQTRADE__API_SERVER__LISTEN_PORT=8080
-FREQTRADE__API_SERVER__USERNAME=trendfollowing_user
-FREQTRADE__API_SERVER__PASSWORD=trendfollowing_secure_password
-FREQTRADE__API_SERVER__JWT_SECRET_KEY=TrendFollowingJWTSecretKey2024
-FREQTRADE__API_SERVER__WS_TOKEN=TrendFollowingWSToken2024
-FREQTRADE__API_SERVER__ROOT_PATH=/api/v1/trendfollowing
+FREQTRADE__API_SERVER__USERNAME=notankai_user
+FREQTRADE__API_SERVER__PASSWORD=notankai_secure_password
+FREQTRADE__API_SERVER__JWT_SECRET_KEY=NoTankAIJWTSecretKey2024
+FREQTRADE__API_SERVER__WS_TOKEN=NoTankAIWSToken2024
+FREQTRADE__API_SERVER__ROOT_PATH=/api/v1/notankai
 FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
 FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
 
