--- a/env-files/powertower.env
+++ b/env-files/powertower.env
@@ -1,14 +1,14 @@
 # PowerTower Strategy Environment
-# Multi-Strategy Freqtrade Setup - Strategy 4
+# Multi-Strategy Freqtrade Setup - PowerTower
 
 FREQTRADE__BOT_NAME=Vasko_PowerTower
 FREQTRADE__STRATEGY=PowerTower
 
 # Trading Configuration
 FREQTRADE__TRADING_MODE=futures
-FREQTRADE__MAX_OPEN_TRADES=7
-FREQTRADE__FUTURES_MAX_OPEN_TRADES_LONG=4
-FREQTRADE__FUTURES_MAX_OPEN_TRADES_SHORT=3
+FREQTRADE__MAX_OPEN_TRADES=5
+FREQTRADE__FUTURES_MAX_OPEN_TRADES_LONG=3
+FREQTRADE__FUTURES_MAX_OPEN_TRADES_SHORT=2
 
 # Exchange Settings (Bybit)
 FREQTRADE__EXCHANGE__NAME=bybit
@@ -17,15 +17,14 @@ FREQTRADE__EXCHANGE__SECRET=Put_Your_Bybit_API_Secret_Here
 
 # API Server Configuration
 FREQTRADE__API_SERVER__ENABLED=true
-FREQTRADE__API_SERVER__LISTEN_PORT=8084
+FREQTRADE__API_SERVER__LISTEN_PORT=8080
 FREQTRADE__API_SERVER__USERNAME=powertower_user
 FREQTRADE__API_SERVER__PASSWORD=powertower_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=PowerTowerJWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=PowerTowerWSToken2024
-FREQTRADE__API_SERVER__ROOT_PATH=/powertower
+FREQTRADE__API_SERVER__ROOT_PATH=/api/v1/powertower
 FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
 FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
-
 
 # Telegram Settings (Optional)
 FREQTRADE__TELEGRAM__ENABLED=false
@@ -35,6 +34,3 @@ FREQTRADE__TELEGRAM__CHAT_ID=123456789
 # Environment Settings
 TZ=Europe/Istanbul
 FREQTRADE__DRY_RUN=true
-
-# Strategy Path Configuration
-STRATEGY_PATH=user_data/strategies/powertower
