Refactor API server configuration in environment files and NGINX to simplify CORS settings and fix path issues for multi-strategy Freqtrade setup

--- a/env-files/dtw.env
+++ b/env-files/dtw.env
@@ -22,8 +22,7 @@ FREQTRADE__API_SERVER__USERNAME=dtw_user
 FREQTRADE__API_SERVER__PASSWORD=dtw_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=DTWJWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=DTWWSToken2024
-FREQTRADE__API_SERVER__ROOT_PATH=/api/v1/dtw
-FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
+FREQTRADE__API_SERVER__CORS_ORIGINS=https://freq.gaiaderma.com,http://freq.gaiaderma.com
 FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
 
 # Telegram Settings (Optional)
