--- a/env-files/fvg.env
+++ b/env-files/fvg.env
@@ -22,8 +22,7 @@ FREQTRADE__API_SERVER__USERNAME=fvg_user
 FREQTRADE__API_SERVER__PASSWORD=fvg_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=FVGJWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=FVGWSToken2024
-FREQTRADE__API_SERVER__ROOT_PATH=/api/v1/fvg
-FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
+FREQTRADE__API_SERVER__CORS_ORIGINS=https://freq.gaiaderma.com,http://freq.gaiaderma.com
 FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
 
 # Telegram Settings (Optional)
