--- a/env-files/nfi-x6.env
+++ b/env-files/nfi-x6.env
@@ -22,9 +22,8 @@ FREQTRADE__API_SERVER__USERNAME=nfi_x6_user
 FREQTRADE__API_SERVER__PASSWORD=nfi_x6_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=NostalgiaInfinityX6JWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=NostalgiaInfinityX6WSToken2024
-FREQTRADE__API_SERVER__ROOT_PATH=/api/v1/nfi-x6
-FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
-FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
+FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=https://freq.gaiaderma.com,http://freq.gaiaderma.com
+FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS="*"
 
 # Telegram Settings (Optional)
 FREQTRADE__TELEGRAM__ENABLED=false
