--- a/env-files/renko.env
+++ b/env-files/renko.env
@@ -22,8 +22,7 @@ FREQTRADE__API_SERVER__USERNAME=renko_user
 FREQTRADE__API_SERVER__PASSWORD=renko_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=RenkoJWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=RenkoWSToken2024
-FREQTRADE__API_SERVER__ROOT_PATH=/api/v1/renko
-FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
+FREQTRADE__API_SERVER__CORS_ORIGINS=https://freq.gaiaderma.com,http://freq.gaiaderma.com
 FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
 
 # Telegram Settings (Optional)
