--- a/env-files/bandtastic.env
+++ b/env-files/bandtastic.env
@@ -22,8 +22,7 @@ FREQTRADE__API_SERVER__USERNAME=bandtastic_user
 FREQTRADE__API_SERVER__PASSWORD=bandtastic_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=BandtasticJWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=BandtasticWSToken2024
-FREQTRADE__API_SERVER__ROOT_PATH=/api/v1/bandtastic
-FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
+FREQTRADE__API_SERVER__CORS_ORIGINS=https://freq.gaiaderma.com,http://freq.gaiaderma.com
 FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
 
 # Telegram Settings (Optional)
