--- a/env-files/notankai.env
+++ b/env-files/notankai.env
@@ -22,8 +22,7 @@ FREQTRADE__API_SERVER__USERNAME=notankai_user
 FREQTRADE__API_SERVER__PASSWORD=notankai_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=NoTankAIJWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=NoTankAIWSToken2024
-FREQTRADE__API_SERVER__ROOT_PATH=/api/v1/notankai
-FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
+FREQTRADE__API_SERVER__CORS_ORIGINS=https://freq.gaiaderma.com,http://freq.gaiaderma.com
 FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
 
 # Telegram Settings (Optional)
