--- a/env-files/quickadapter.env
+++ b/env-files/quickadapter.env
@@ -22,8 +22,7 @@ FREQTRADE__API_SERVER__USERNAME=quickadapter_user
 FREQTRADE__API_SERVER__PASSWORD=quickadapter_secure_password
 FREQTRADE__API_SERVER__JWT_SECRET_KEY=QuickAdapterJWTSecretKey2024
 FREQTRADE__API_SERVER__WS_TOKEN=QuickAdapterWSToken2024
-FREQTRADE__API_SERVER__ROOT_PATH=/api/v1/quickadapter
-FREQTRADE__API_SERVER__CORS_ALLOW_ORIGINS=["https://freq.gaiaderma.com","http://freq.gaiaderma.com"]
+FREQTRADE__API_SERVER__CORS_ORIGINS=https://freq.gaiaderma.com,http://freq.gaiaderma.com
 FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
 
 # Telegram Settings (Optional)
