--- a/nginx-freqtrade-multi.conf
+++ b/nginx-freqtrade-multi.conf
@@ -1,5 +1,5 @@
-# NGINX Configuration for Multi-Strategy Freqtrade Reverse Proxy
-# This configuration supports WebSockets and multiple strategy containers
+# NGINX Configuration for Multi-Strategy Freqtrade - CORRECTED
+# This fixes the double-path issue by using simple base paths
 
 # WebSocket upgrade mapping (required for FreqUI)
 map $http_upgrade $connection_upgrade {
@@ -11,7 +11,6 @@ server {
     listen 80;
     listen [::]:80;
 
-    # Replace with your EC2 public IP or domain name
     server_name freq.gaiaderma.com;
 
     # Security headers
@@ -19,122 +18,97 @@ server {
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
     add_header Referrer-Policy "strict-origin-when-cross-origin";
+    
+    # CORS headers for cross-origin requests
+    add_header Access-Control-Allow-Origin "freq.gaiaderma.com";
+    add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE";
+    add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization";
+    add_header Access-Control-Expose-Headers "Content-Length,Content-Range";
 
-    # Main FreqUI location - serves the UI and routes to appropriate strategy backend
+    # Main FreqUI location - Default to NFI-X6 strategy
     location / {
-        # Default to NFI-X6 strategy (port 8080)
-        proxy_pass http://127.0.0.1:8080;
-        proxy_http_version 1.1;
-
-        # WebSocket support (essential for FreqUI)
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-
-        # Standard proxy headers
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $server_name;
-
-        # Timeout settings (important for WebSockets)
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-
-        # Disable proxy buffering for better real-time performance
-        proxy_buffering off;
-        proxy_cache_bypass $http_upgrade;
-
-    }
-
-    # Strategy-specific API endpoints
-    # NFI-X6 Strategy (default)
-    location /api/v1/nfi-x6/ {
-        rewrite ^/api/v1/nfi-x6/(.*) /api/v1/$1 break;
         proxy_pass http://127.0.0.1:8080;
         include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
     }
 
-    # QuickAdapter Strategy
-    location /api/v1/quickadapter/ {
-        rewrite ^/api/v1/quickadapter/(.*) /api/v1/$1 break;
-        proxy_pass http://127.0.0.1:8081;
+    # Strategy-specific paths (FreqUI will append /api/v1/* to these)
+    
+    # NFI-X6 Strategy - Base path /nfi-x6
+    location /nfi-x6/ {
+        proxy_pass http://127.0.0.1:8080/;
         include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
     }
 
-    # BandtasticFiboHyper Strategy
-    location /api/v1/bandtastic/ {
-        rewrite ^/api/v1/bandtastic/(.*) /api/v1/$1 break;
-        proxy_pass http://127.0.0.1:8082;
+    # QuickAdapter Strategy - Base path /quickadapter  
+    location /quickadapter/ {
+        proxy_pass http://127.0.0.1:8081/;
         include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
     }
 
-    # TrendFollowing Strategy
-    location /api/v1/trendfollowing/ {
-        rewrite ^/api/v1/trendfollowing/(.*) /api/v1/$1 break;
-        proxy_pass http://127.0.0.1:8083;
+    # BandtasticFiboHyper Strategy - Base path /bandtastic
+    location /bandtastic/ {
+        proxy_pass http://127.0.0.1:8082/;
         include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
     }
 
-    # Renko Strategy
-    location /api/v1/renko/ {
-        rewrite ^/api/v1/renko/(.*) /api/v1/$1 break;
-        proxy_pass http://127.0.0.1:8084;
+    # TrendFollowing Strategy - Base path /trendfollowing
+    location /trendfollowing/ {
+        proxy_pass http://127.0.0.1:8083/;
         include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
     }
 
-    # FVG Strategy
-    location /api/v1/fvg/ {
-        rewrite ^/api/v1/fvg/(.*) /api/v1/$1 break;
-        proxy_pass http://127.0.0.1:8085;
+    # Renko Strategy - Base path /renko
+    location /renko/ {
+        proxy_pass http://127.0.0.1:8084/;
         include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
     }
 
-    # PowerTower Strategy
-    location /api/v1/powertower/ {
-        rewrite ^/api/v1/powertower/(.*) /api/v1/$1 break;
-        proxy_pass http://127.0.0.1:8086;
+    # FVG Strategy - Base path /fvg
+    location /fvg/ {
+        proxy_pass http://127.0.0.1:8085/;
         include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
     }
 
-    # FastSupertrend Strategy
-    location /api/v1/fastsupertrend/ {
-        rewrite ^/api/v1/fastsupertrend/(.*) /api/v1/$1 break;
-        proxy_pass http://127.0.0.1:8087;
+    # PowerTower Strategy - Base path /powertower
+    location /powertower/ {
+        proxy_pass http://127.0.0.1:8086/;
         include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
     }
 
-    # NoTankAI Strategy
-    location /api/v1/notankai/ {
-        rewrite ^/api/v1/notankai/(.*) /api/v1/$1 break;
-        proxy_pass http://127.0.0.1:8088;
+    # FastSupertrend Strategy - Base path /fastsupertrend
+    location /fastsupertrend/ {
+        proxy_pass http://127.0.0.1:8087/;
         include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
     }
 
-    # DTW Strategy
-    location /api/v1/dtw/ {
-        rewrite ^/api/v1/dtw/(.*) /api/v1/$1 break;
-        proxy_pass http://127.0.0.1:8089;
+    # NoTankAI Strategy - Base path /notankai
+    location /notankai/ {
+        proxy_pass http://127.0.0.1:8088/;
         include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
     }
 
-    # Health check endpoints for each strategy
+    # DTW Strategy - Base path /dtw
+    location /dtw/ {
+        proxy_pass http://127.0.0.1:8089/;
+        include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
+    }
+
+    # Health check endpoints
     location /health/nfi-x6 {
         access_log off;
         proxy_pass http://127.0.0.1:8080/api/v1/ping;
         proxy_set_header Host $host;
     }
 
-    location /health/quickadapter {
-        access_log off;
-        proxy_pass http://127.0.0.1:8081/api/v1/ping;
-        proxy_set_header Host $host;
-    }
-
     location /health/bandtastic {
         access_log off;
         proxy_pass http://127.0.0.1:8082/api/v1/ping;
+        proxy_set_header Host $host;
+    }
+
+    location /health/quickadapter {
+        access_log off;
+        proxy_pass http://127.0.0.1:8081/api/v1/ping;
         proxy_set_header Host $host;
     }
 
@@ -190,19 +164,3 @@ server {
     access_log /var/log/nginx/freqtrade_access.log;
     error_log /var/log/nginx/freqtrade_error.log;
 }
-
-# Optional: HTTPS configuration (recommended for production)
-# server {
-#     listen 443 ssl http2;
-#     listen [::]:443 ssl http2;
-#     server_name freq.gaiaderma.com;
-#     
-#     # SSL configuration
-#     ssl_certificate /path/to/certificate.crt;
-#     ssl_certificate_key /path/to/private.key;
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512;
-#     ssl_prefer_server_ciphers off;
-#     
-#     # Include all the same location blocks as above
-# }
