--- a/nginx-freqtrade-multi.conf
+++ b/nginx-freqtrade-multi.conf
@@ -81,6 +81,48 @@ server {
         include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
     }
 
+    # MacheteV8b Strategy - Base path /machetev8b
+    location /machetev8b/ {
+        proxy_pass http://127.0.0.1:8090/;
+        include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
+    }
+
+    # ElliotV5_SMA Strategy - Base path /elliotv5_sma
+    location /elliotv5_sma/ {
+        proxy_pass http://127.0.0.1:8091/;
+        include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
+    }
+
+    # BinClucMadV1 Strategy - Base path /binclucmadv1
+    location /binclucmadv1/ {
+        proxy_pass http://127.0.0.1:8092/;
+        include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
+    }
+
+    # NASOSv4 Strategy - Base path /nasosv4
+    location /nasosv4/ {
+        proxy_pass http://127.0.0.1:8093/;
+        include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
+    }
+
+    # MartyEMA Strategy - Base path /martyema
+    location /martyema/ {
+        proxy_pass http://127.0.0.1:8094/;
+        include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
+    }
+
+    # Ichimoku Strategy - Base path /ichimoku
+    location /ichimoku/ {
+        proxy_pass http://127.0.0.1:8095/;
+        include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
+    }
+
+    # BigWill Strategy - Base path /bigwill
+    location /bigwill/ {
+        proxy_pass http://127.0.0.1:8096/;
+        include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
+    }
+
     # Health check endpoints
     location /health/nfi-x6 {
         access_log off;
@@ -127,6 +169,48 @@ server {
     location /health/notankai {
         access_log off;
         proxy_pass http://127.0.0.1:8088/api/v1/ping;
+        proxy_set_header Host $host;
+    }
+
+    location /health/machetev8b {
+        access_log off;
+        proxy_pass http://127.0.0.1:8090/api/v1/ping;
+        proxy_set_header Host $host;
+    }
+
+    location /health/elliotv5_sma {
+        access_log off;
+        proxy_pass http://127.0.0.1:8091/api/v1/ping;
+        proxy_set_header Host $host;
+    }
+
+    location /health/binclucmadv1 {
+        access_log off;
+        proxy_pass http://127.0.0.1:8092/api/v1/ping;
+        proxy_set_header Host $host;
+    }
+
+    location /health/nasosv4 {
+        access_log off;
+        proxy_pass http://127.0.0.1:8093/api/v1/ping;
+        proxy_set_header Host $host;
+    }
+
+    location /health/martyema {
+        access_log off;
+        proxy_pass http://127.0.0.1:8094/api/v1/ping;
+        proxy_set_header Host $host;
+    }
+
+    location /health/ichimoku {
+        access_log off;
+        proxy_pass http://127.0.0.1:8095/api/v1/ping;
+        proxy_set_header Host $host;
+    }
+
+    location /health/bigwill {
+        access_log off;
+        proxy_pass http://127.0.0.1:8096/api/v1/ping;
         proxy_set_header Host $host;
     }
 
