--- a/env-files/martyema.env
+++ b/env-files/martyema.env
@@ -1,8 +1,8 @@
-# BandtasticFiboHyper Strategy Environment
-# Multi-Strategy Freqtrade Setup - BandtasticFiboHyper
+# MartyEMA Strategy Environment
+# Multi-Strategy Freqtrade Setup - MartyEMA
 
-FREQTRADE__BOT_NAME=Vasko_Bandtastic
-FREQTRADE__STRATEGY=BandtasticFiboHyper_opt314
+FREQTRADE__BOT_NAME=Vasko_MartyEMA
+FREQTRADE__STRATEGY=MartyEMA
 
 # Trading Configuration
 FREQTRADE__TRADING_MODE=futures
@@ -18,10 +18,10 @@ FREQTRADE__EXCHANGE__SECRET=Put_Your_Bybit_API_Secret_Here
 # API Server Configuration
 FREQTRADE__API_SERVER__ENABLED=true
 FREQTRADE__API_SERVER__LISTEN_PORT=8080
-FREQTRADE__API_SERVER__USERNAME=bandtastic_user
-FREQTRADE__API_SERVER__PASSWORD=bandtastic_secure_password
-FREQTRADE__API_SERVER__JWT_SECRET_KEY=BandtasticJWTSecretKey2024
-FREQTRADE__API_SERVER__WS_TOKEN=BandtasticWSToken2024
+FREQTRADE__API_SERVER__USERNAME=martyema_user
+FREQTRADE__API_SERVER__PASSWORD=martyema_secure_password
+FREQTRADE__API_SERVER__JWT_SECRET_KEY=MartyEMAJWTSecretKey2024
+FREQTRADE__API_SERVER__WS_TOKEN=MartyEMAWSToken2024
 FREQTRADE__API_SERVER__CORS_ORIGINS=https://freq.gaiaderma.com,http://freq.gaiaderma.com
 FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
 
