--- a/env-files/nasosv4.env
+++ b/env-files/nasosv4.env
@@ -1,8 +1,8 @@
-# BandtasticFiboHyper Strategy Environment
-# Multi-Strategy Freqtrade Setup - BandtasticFiboHyper
+# NASOSv4 Strategy Environment
+# Multi-Strategy Freqtrade Setup - NASOSv4
 
-FREQTRADE__BOT_NAME=Vasko_Bandtastic
-FREQTRADE__STRATEGY=BandtasticFiboHyper_opt314
+FREQTRADE__BOT_NAME=Vasko_NASOSv4
+FREQTRADE__STRATEGY=NASOSv4
 
 # Trading Configuration
 FREQTRADE__TRADING_MODE=futures
@@ -18,10 +18,10 @@ FREQTRADE__EXCHANGE__SECRET=Put_Your_Bybit_API_Secret_Here
 # API Server Configuration
 FREQTRADE__API_SERVER__ENABLED=true
 FREQTRADE__API_SERVER__LISTEN_PORT=8080
-FREQTRADE__API_SERVER__USERNAME=bandtastic_user
-FREQTRADE__API_SERVER__PASSWORD=bandtastic_secure_password
-FREQTRADE__API_SERVER__JWT_SECRET_KEY=BandtasticJWTSecretKey2024
-FREQTRADE__API_SERVER__WS_TOKEN=BandtasticWSToken2024
+FREQTRADE__API_SERVER__USERNAME=nasosv4_user
+FREQTRADE__API_SERVER__PASSWORD=nasosv4_secure_password
+FREQTRADE__API_SERVER__JWT_SECRET_KEY=NASOSv4JWTSecretKey2024
+FREQTRADE__API_SERVER__WS_TOKEN=NASOSv4WSToken2024
 FREQTRADE__API_SERVER__CORS_ORIGINS=https://freq.gaiaderma.com,http://freq.gaiaderma.com
 FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
 
