Add BandtasticFiboHyper_Combined strategy with ATR-based dynamic stop loss
  - Create combined strategy merging best parameters from opt314 (shorts) and opt490 (longs)
  - Implement multi-layer ATR-based custom_stoploss with:
    - Volatility-adjusted stops (5-15% range based on ATR)
    - Profit-based stop tightening (3-7% max loss when in profit)
    - Doom stop protection at 20%
    - Minimum 15-minute trade duration before dynamic stop activates
  - Use fixed 2x leverage for predictable risk management
  - Update docker-compose-multi-strategies.yml to use BandtasticFiboHyper_Combined
  - Update bandtastic.env to use BandtasticFiboHyper_Combined

--- a/docker-compose-multi-strategies.yml
+++ b/docker-compose-multi-strategies.yml
@@ -39,7 +39,7 @@ services:
       --strategy-path user_data/strategies/nfi
       --strategy NostalgiaForInfinityX7
 
-  # BandtasticFiboHyper Strategy
+  # BandtasticFiboHyper Strategy (Combined - best of opt314 + opt490)
   freqtrade-bandtastic:
     <<: *common-settings
     container_name: freqtrade-bandtastic
@@ -54,7 +54,7 @@ services:
       --db-url sqlite:////freqtrade/user_data/bandtastic-tradesv3.sqlite
       --log-file user_data/logs/bandtastic.log
       --strategy-path user_data/strategies/BandtasticFiboHyper
-      --strategy BandtasticFiboHyper_opt314
+      --strategy BandtasticFiboHyper_Combined
 
   # TrendFollowing Strategy
   freqtrade-trendfollowing:
