--- a/env-files/bandtastic.env
+++ b/env-files/bandtastic.env
@@ -1,8 +1,8 @@
 # BandtasticFiboHyper Strategy Environment
-# Multi-Strategy Freqtrade Setup - BandtasticFiboHyper
+# Multi-Strategy Freqtrade Setup - BandtasticFiboHyper Combined (opt314 + opt490)
 
 FREQTRADE__BOT_NAME=Vasko_Bandtastic
-FREQTRADE__STRATEGY=BandtasticFiboHyper_opt314
+FREQTRADE__STRATEGY=BandtasticFiboHyper_Combined
 
 # Trading Configuration
 FREQTRADE__TRADING_MODE=futures
