Update BandtasticFiboHyper_Combined strategy: enhance trade limits and version increment

--- a/env-files/bandtastic.env
+++ b/env-files/bandtastic.env
@@ -7,8 +7,11 @@ FREQTRADE__STRATEGY=BandtasticFiboHyper_Combined
 # Trading Configuration
 FREQTRADE__TRADING_MODE=futures
 FREQTRADE__MAX_OPEN_TRADES=8
-FREQTRADE__FUTURES_MAX_OPEN_TRADES_LONG=4
-FREQTRADE__FUTURES_MAX_OPEN_TRADES_SHORT=4
+
+# Note: Long/short limits (4+4) are enforced in the strategy via confirm_trade_entry()
+# These env vars below don't work - they're not valid Freqtrade config options
+# FREQTRADE__FUTURES_MAX_OPEN_TRADES_LONG=4
+# FREQTRADE__FUTURES_MAX_OPEN_TRADES_SHORT=4
 
 # Exchange Settings (Bybit)
 FREQTRADE__EXCHANGE__NAME=bybit
