--- a/env-files/elliotv5_sma_shorts.env
+++ b/env-files/elliotv5_sma_shorts.env
@@ -1,14 +1,14 @@
-# FastSupertrend Strategy Environment
-# Multi-Strategy Freqtrade Setup - FastSupertrend
+# ElliotV5_SMA_Shorts Strategy Environment
+# Multi-Strategy Freqtrade Setup - ElliotV5_SMA_Shorts (Shorts-only parallel test)
+# Running in parallel with ElliotV5_SMA (longs) for 30-day performance comparison
 
-FREQTRADE__BOT_NAME=Vasko_FastSupertrend
-FREQTRADE__STRATEGY=FastSupertrend_ts_origstop_fix
+FREQTRADE__BOT_NAME=Vasko_ElliotV5_SMA_Shorts
+FREQTRADE__STRATEGY=ElliotV5_SMA_Shorts
 
 # Trading Configuration
 FREQTRADE__TRADING_MODE=futures
 FREQTRADE__MAX_OPEN_TRADES=8
-FREQTRADE__FUTURES_MAX_OPEN_TRADES_LONG=5
-FREQTRADE__FUTURES_MAX_OPEN_TRADES_SHORT=3
+# Note: Strategy enforces max 8 shorts via confirm_trade_entry callback
 
 # Exchange Settings (Bybit)
 FREQTRADE__EXCHANGE__NAME=bybit
@@ -18,10 +18,10 @@ FREQTRADE__EXCHANGE__SECRET=Put_Your_Bybit_API_Secret_Here
 # API Server Configuration
 FREQTRADE__API_SERVER__ENABLED=true
 FREQTRADE__API_SERVER__LISTEN_PORT=8080
-FREQTRADE__API_SERVER__USERNAME=fastsupertrend_user
-FREQTRADE__API_SERVER__PASSWORD=fastsupertrend_secure_password
-FREQTRADE__API_SERVER__JWT_SECRET_KEY=FastSupertrendJWTSecretKey2024
-FREQTRADE__API_SERVER__WS_TOKEN=FastSupertrendWSToken2024
+FREQTRADE__API_SERVER__USERNAME=elliotv5_sma_shorts_user
+FREQTRADE__API_SERVER__PASSWORD=elliotv5_sma_shorts_secure_password
+FREQTRADE__API_SERVER__JWT_SECRET_KEY=ElliotV5_SMAShort sJWTSecretKey2024
+FREQTRADE__API_SERVER__WS_TOKEN=ElliotV5_SMAShortsWSToken2024
 FREQTRADE__API_SERVER__CORS_ORIGINS=https://freq.gaiaderma.com,http://freq.gaiaderma.com
 FREQTRADE__API_SERVER__FORWARDED_ALLOW_IPS=*
 
