--- a/nginx-freqtrade-multi.conf
+++ b/nginx-freqtrade-multi.conf
@@ -45,27 +45,9 @@ server {
         include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
     }
 
-    # TrendFollowing Strategy - Base path /trendfollowing
-    location /trendfollowing/ {
-        proxy_pass http://127.0.0.1:8083/;
-        include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
-    }
-
     # FVG Strategy - Base path /fvg
     location /fvg/ {
         proxy_pass http://127.0.0.1:8085/;
-        include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
-    }
-
-    # PowerTower Strategy - Base path /powertower
-    location /powertower/ {
-        proxy_pass http://127.0.0.1:8086/;
-        include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
-    }
-
-    # FastSupertrend Strategy - Base path /fastsupertrend
-    location /fastsupertrend/ {
-        proxy_pass http://127.0.0.1:8087/;
         include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
     }
 
@@ -111,6 +93,12 @@ server {
         include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
     }
 
+    # ElliotV5_SMA_Shorts Strategy - Base path /elliotv5_sma_shorts
+    location /elliotv5_sma_shorts/ {
+        proxy_pass http://127.0.0.1:8097/;
+        include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
+    }
+
     # Health check endpoints
     location /health/nfi-x6 {
         access_log off;
@@ -124,27 +112,9 @@ server {
         proxy_set_header Host $host;
     }
 
-    location /health/trendfollowing {
-        access_log off;
-        proxy_pass http://127.0.0.1:8083/api/v1/ping;
-        proxy_set_header Host $host;
-    }
-
     location /health/fvg {
         access_log off;
         proxy_pass http://127.0.0.1:8085/api/v1/ping;
-        proxy_set_header Host $host;
-    }
-
-    location /health/powertower {
-        access_log off;
-        proxy_pass http://127.0.0.1:8086/api/v1/ping;
-        proxy_set_header Host $host;
-    }
-
-    location /health/fastsupertrend {
-        access_log off;
-        proxy_pass http://127.0.0.1:8087/api/v1/ping;
         proxy_set_header Host $host;
     }
 
@@ -187,6 +157,12 @@ server {
     location /health/bigwill {
         access_log off;
         proxy_pass http://127.0.0.1:8096/api/v1/ping;
+        proxy_set_header Host $host;
+    }
+
+    location /health/elliotv5_sma_shorts {
+        access_log off;
+        proxy_pass http://127.0.0.1:8097/api/v1/ping;
         proxy_set_header Host $host;
     }
 
