--- a/nginx-freqtrade-multi.conf
+++ b/nginx-freqtrade-multi.conf
@@ -75,6 +75,24 @@ server {
         include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
     }
 
+    # E0V1E Strategy - Base path /e0v1e
+    location /e0v1e/ {
+        proxy_pass http://127.0.0.1:8098/;
+        include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
+    }
+
+    # E0V1E_Shorts Strategy - Base path /e0v1e_shorts
+    location /e0v1e_shorts/ {
+        proxy_pass http://127.0.0.1:8099/;
+        include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
+    }
+
+    # EI4_t4c0s_V2_2 Strategy - Base path /ei4_t4c0s_v2_2
+    location /ei4_t4c0s_v2_2/ {
+        proxy_pass http://127.0.0.1:8100/;
+        include /etc/nginx/conf.d/freqtrade-proxy-headers.conf;
+    }
+
     # Health check endpoints
     location /health/nfi-x6 {
         access_log off;
@@ -115,6 +133,24 @@ server {
     location /health/elliotv5_sma_shorts {
         access_log off;
         proxy_pass http://127.0.0.1:8097/api/v1/ping;
+        proxy_set_header Host $host;
+    }
+
+    location /health/e0v1e {
+        access_log off;
+        proxy_pass http://127.0.0.1:8098/api/v1/ping;
+        proxy_set_header Host $host;
+    }
+
+    location /health/e0v1e_shorts {
+        access_log off;
+        proxy_pass http://127.0.0.1:8099/api/v1/ping;
+        proxy_set_header Host $host;
+    }
+
+    location /health/ei4_t4c0s_v2_2 {
+        access_log off;
+        proxy_pass http://127.0.0.1:8100/api/v1/ping;
         proxy_set_header Host $host;
     }
 
